# HuddleBoard

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9123c949d241_initial_tables_boards_columns_cards.py
backend/app/: constants.py  database.py  limiter.py  main.py  models.py  schemas.py  tasks.py
backend/app/routers/: boards.py  cards.py
backend/app/ws/: manager.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/board/: AddCardForm.vue  BoardCard.vue  BoardColumn.vue
frontend/src/components/ui/: AdminPanel.vue  AdminTokenModal.vue  PasswordModal.vue  ToastNotification.vue
frontend/src/composables/: useClipboard.js  useCountdown.js  useToast.js  useTypewriter.js
frontend/src/constants/: board.js
frontend/src/lib/: api.js  errors.js
frontend/src/router/: index.js
frontend/src/stores/: board.js  ws.js
frontend/src/views/: BoardView.vue  HomeView.vue  NotFoundView.vue
